Remove client ID input and default group name
